@@ -11,6 +11,8 @@ module OData
     attr_accessor :fc_target_path
     # Should the property appear in both the mapped schema path and the properties collection
     attr_accessor :fc_keep_in_content
+    # Is the property a navigation property?
+    attr_accessor :nav_prop
     
     # Creates a new instance of the Class Property class
     #
@@ -23,6 +25,7 @@ module OData
       @nullable =             (property_element['Nullable'] && property_element['Nullable'] == "true") || false
       @fc_target_path =       property_element['FC_TargetPath']
       @fc_keep_in_content  =  (property_element['FC_KeepInContent']) ? (property_element['FC_KeepInContent'] == "true") : nil
+      @nav_prop =             property_element.name == 'NavigationProperty'
     end
   end
 end
